@@ -7,6 +7,7 @@
   * Cleaned up the coherent part of the dedispersion module
   * Added a time estimating progress bar to lsl.common.progress
   * Fixed the data scaling in the SoftwareDP _processStreamFilter() function
+  * Fixed the integration time stored in the FITS IDI files generated by correlateTBW.py
 
 0.6.3
   * Fixed a typo. in lsl.imaing.utils.pruneBaselineRange() function
